--- a/core/templates/core/collapse.html
+++ b/core/templates/core/collapse.html
@@ -1,235 +1,210 @@
-{% extends "core/base.html" %} 
+{% extends 'core/base.html' %}
 {% load static %}
 {% block collapse %}
-<ul id="collapse">
-  <li>
-    <label for="first">
-      <div class="informacoes-do-paciente">
-        <img src={% static 'imagens/usuario.svg' %} alt="Logo DietHub"> Paciente
-        1
-      </div>
-      <i class="ph ph-caret-down"></i>
-    </label>
-    <input type="radio" name="collapse" id="first" checked />
+  <ul id="collapse">
+    <li>
+      <label for="first">
+        <div class="informacoes-do-paciente">
+          <img src="{% static 'imagens/usuario.svg' %}" alt="Logo DietHub" /> Paciente 1
+        </div>
+        <i class="ph ph-caret-down"></i>
+      </label>
+      <input type="radio" name="collapse" id="first" checked />
 
-    <div class="content">
-      <div class="informacoes-gerais-do-paciente">
-        <div class="detalhes-collapse">
-          <span class="titulo-collapse">Nome</span>
-          <span class="dados-do-cliente">Paciente 1</span>
+      <div class="content">
+        <div class="informacoes-gerais-do-paciente">
+          <div class="detalhes-collapse">
+            <span class="titulo-collapse">Nome</span>
+            <span class="dados-do-cliente">Paciente 1</span>
+          </div>
+
+          <div class="detalhes-collapse">
+            <span class="titulo-collapse">Email</span>
+            <span class="dados-do-cliente">paciente1@gmail.com</span>
+          </div>
+
+          <div class="detalhes-collapse">
+            <span class="titulo-collapse">CPF</span>
+            <span class="dados-do-cliente">123.456.789-00</span>
+          </div>
+
+          <div class="detalhes-collapse">
+            <span class="titulo-collapse">Whatsapp</span>
+            <a href="#" class="dados-do-cliente" id="botao-entrar-em-contato"><img src="{% static 'imagens/icone-whatsapp.svg' %}" alt="icone-whatsapp" /> Entrar em contato</a>
+          </div>
         </div>
 
-        <div class="detalhes-collapse">
-          <span class="titulo-collapse">Email</span>
-          <span class="dados-do-cliente">paciente1@gmail.com</span>
+        <hr class="solid" />
+
+        <div class="informacoes-gerais-do-paciente">
+          <div class="detalhes-collapse">
+            <span class="titulo-collapse">Dieta</span>
+            <span class="aguardando-acao">Aguardando resposta do formulário de pré-consulta</span>
+          </div>
+
+          <button id="botao-criar-dieta">
+            <i class="ph ph-plus"></i>
+            <span>Criar dieta</span>
+          </button>
         </div>
 
-        <div class="detalhes-collapse">
-          <span class="titulo-collapse">CPF</span>
-          <span class="dados-do-cliente">123.456.789-00</span>
+        <hr class="solid" />
+
+        <div class="informacoes-gerais-do-paciente">
+          <div class="detalhes-collapse">
+            <span class="titulo-collapse">Diário alimentar</span>
+            <span class="aguardando-acao">Aguardando resposta do formulário de pré-consulta</span>
+          </div>
         </div>
 
-        <div class="detalhes-collapse">
-          <span class="titulo-collapse">Whatsapp</span>
-          <a href="#" class="dados-do-cliente" id="botao-entrar-em-contato">
-            <img src={% static 'imagens/icone-whatsapp.svg' %}
-            alt="icone-whatsapp"> Entrar em contato
-          </a>
-        </div>
-      </div>
-
-      <hr class="solid" />
-
-      <div class="informacoes-gerais-do-paciente">
-        <div class="detalhes-collapse">
-          <span class="titulo-collapse">Dieta</span>
-          <span class="aguardando-acao"
-            >Aguardando resposta do formulário de pré-consulta</span
-          >
-        </div>
-
-        <button id="botao-criar-dieta">
-          <i class="ph ph-plus"></i>
-          <span> Criar dieta </span>
-        </button>
-      </div>
-
-      <hr class="solid" />
-
-      <div class="informacoes-gerais-do-paciente">
-        <div class="detalhes-collapse">
-          <span class="titulo-collapse">Diário alimentar</span>
-          <span class="aguardando-acao"
-            >Aguardando resposta do formulário de pré-consulta</span
-          >
-        </div>
-      </div>
-
-      <div class="footer-collapse-pacientes">
-        <button id="botao-editar">
-          <i class="ph ph-pencil-simple-line"></i>
-          Editar
-        </button>
-        <button id="botao-excluir">
-          <i class="ph ph-trash"></i>
-          Excluir
-        </button>
-      </div>
-    </div>
-  </li>
-
-  <li>
-    <label for="second">
-      <div class="informacoes-do-paciente">
-        <img src={% static 'imagens/usuario.svg' %} alt="Logo DietHub"> Paciente
-        2
-      </div>
-
-      <i class="ph ph-caret-down"></i>
-    </label>
-    <input type="radio" name="collapse" id="second" />
-
-    <div class="content">
-      <div class="informacoes-gerais-do-paciente">
-        <div class="detalhes-collapse">
-          <span class="titulo-collapse">Nome</span>
-          <span class="dados-do-cliente">Paciente 1</span>
-        </div>
-
-        <div class="detalhes-collapse">
-          <span class="titulo-collapse">Email</span>
-          <span class="dados-do-cliente">paciente1@gmail.com</span>
-        </div>
-
-        <div class="detalhes-collapse">
-          <span class="titulo-collapse">CPF</span>
-          <span class="dados-do-cliente">123.456.789-00</span>
-        </div>
-
-        <div class="detalhes-collapse">
-          <span class="titulo-collapse">Whatsapp</span>
-          <a href="#" class="dados-do-cliente" id="botao-entrar-em-contato">
-            <img src={% static 'imagens/icone-whatsapp.svg' %}
-            alt="icone-whatsapp"> Entrar em contato
-          </a>
+        <div class="footer-collapse-pacientes">
+          <button id="botao-editar">
+            <i class="ph ph-pencil-simple-line"></i>
+            Editar
+          </button>
+          <button id="botao-excluir">
+            <i class="ph ph-trash"></i>
+            Excluir
+          </button>
         </div>
       </div>
+    </li>
 
-      <hr class="solid" />
-
-      <div class="informacoes-gerais-do-paciente">
-        <div class="detalhes-collapse">
-          <span class="titulo-collapse">Dieta</span>
-          <span class="aguardando-acao"
-            >Aguardando resposta do formulário de pré-consulta</span
-          >
+    <li>
+      <label for="second">
+        <div class="informacoes-do-paciente">
+          <img src="{% static 'imagens/usuario.svg' %}" alt="Logo DietHub" /> Paciente 2
         </div>
 
-        <button id="botao-criar-dieta">
-          <i class="ph ph-plus"></i>
-          <span> Criar dieta </span>
-        </button>
-      </div>
+        <i class="ph ph-caret-down"></i>
+      </label>
+      <input type="radio" name="collapse" id="second" />
 
-      <hr class="solid" />
+      <div class="content">
+        <div class="informacoes-gerais-do-paciente">
+          <div class="detalhes-collapse">
+            <span class="titulo-collapse">Nome</span>
+            <span class="dados-do-cliente">Paciente 1</span>
+          </div>
 
-      <div class="informacoes-gerais-do-paciente">
-        <div class="detalhes-collapse">
-          <span class="titulo-collapse">Diário alimentar</span>
-          <span class="aguardando-acao"
-            >Aguardando resposta do formulário de pré-consulta</span
-          >
-        </div>
-      </div>
+          <div class="detalhes-collapse">
+            <span class="titulo-collapse">Email</span>
+            <span class="dados-do-cliente">paciente1@gmail.com</span>
+          </div>
 
-      <div class="footer-collapse-pacientes">
-        <button id="botao-editar">
-          <i class="ph ph-pencil-simple-line"></i>
-          Editar
-        </button>
-        <button id="botao-excluir">
-          <i class="ph ph-trash"></i>
-          Excluir
-        </button>
-      </div>
-    </div>
-  </li>
+          <div class="detalhes-collapse">
+            <span class="titulo-collapse">CPF</span>
+            <span class="dados-do-cliente">123.456.789-00</span>
+          </div>
 
-  <li>
-    <label for="third">
-      <div class="informacoes-do-paciente">
-        <img src={% static 'imagens/usuario.svg' %} alt="Logo DietHub"> Paciente
-        3
-      </div>
-      <i class="ph ph-caret-down"></i>
-    </label>
-    <input type="radio" name="collapse" id="third" />
-
-    <div class="content">
-      <div class="informacoes-gerais-do-paciente">
-        <div class="detalhes-collapse">
-          <span class="titulo-collapse">Nome</span>
-          <span class="dados-do-cliente">Paciente 1</span>
+          <div class="detalhes-collapse">
+            <span class="titulo-collapse">Whatsapp</span>
+            <a href="#" class="dados-do-cliente" id="botao-entrar-em-contato"><img src="{% static 'imagens/icone-whatsapp.svg' %}" alt="icone-whatsapp" /> Entrar em contato</a>
+          </div>
         </div>
 
-        <div class="detalhes-collapse">
-          <span class="titulo-collapse">Email</span>
-          <span class="dados-do-cliente">paciente1@gmail.com</span>
+        <hr class="solid" />
+
+        <div class="informacoes-gerais-do-paciente">
+          <div class="detalhes-collapse">
+            <span class="titulo-collapse">Dieta</span>
+            <span class="aguardando-acao">Aguardando resposta do formulário de pré-consulta</span>
+          </div>
+
+          <button id="botao-criar-dieta">
+            <i class="ph ph-plus"></i>
+            <span>Criar dieta</span>
+          </button>
         </div>
 
-        <div class="detalhes-collapse">
-          <span class="titulo-collapse">CPF</span>
-          <span class="dados-do-cliente">123.456.789-00</span>
+        <hr class="solid" />
+
+        <div class="informacoes-gerais-do-paciente">
+          <div class="detalhes-collapse">
+            <span class="titulo-collapse">Diário alimentar</span>
+            <span class="aguardando-acao">Aguardando resposta do formulário de pré-consulta</span>
+          </div>
         </div>
 
-        <div class="detalhes-collapse">
-          <span class="titulo-collapse">Whatsapp</span>
-          <a href="#" class="dados-do-cliente" id="botao-entrar-em-contato">
-            <img src={% static 'imagens/icone-whatsapp.svg' %}
-            alt="icone-whatsapp"> Entrar em contato
-          </a>
-        </div>
-      </div>
-
-      <hr class="solid" />
-
-      <div class="informacoes-gerais-do-paciente">
-        <div class="detalhes-collapse">
-          <span class="titulo-collapse">Dieta</span>
-          <span class="aguardando-acao"
-            >Aguardando resposta do formulário de pré-consulta</span
-          >
-        </div>
-
-        <button id="botao-criar-dieta">
-          <i class="ph ph-plus"></i>
-          <span> Criar dieta </span>
-        </button>
-      </div>
-
-      <hr class="solid" />
-
-      <div class="informacoes-gerais-do-paciente">
-        <div class="detalhes-collapse">
-          <span class="titulo-collapse">Diário alimentar</span>
-          <span class="aguardando-acao"
-            >Aguardando resposta do formulário de pré-consulta</span
-          >
+        <div class="footer-collapse-pacientes">
+          <button id="botao-editar">
+            <i class="ph ph-pencil-simple-line"></i>
+            Editar
+          </button>
+          <button id="botao-excluir">
+            <i class="ph ph-trash"></i>
+            Excluir
+          </button>
         </div>
       </div>
+    </li>
 
-      <div class="footer-collapse-pacientes">
-        <button id="botao-editar">
-          <i class="ph ph-pencil-simple-line"></i>
-          Editar
-        </button>
-        <button id="botao-excluir">
-          <i class="ph ph-trash"></i>
-          Excluir
-        </button>
+    <li>
+      <label for="third">
+        <div class="informacoes-do-paciente">
+          <img src="{% static 'imagens/usuario.svg' %}" alt="Logo DietHub" /> Paciente 3
+        </div>
+        <i class="ph ph-caret-down"></i>
+      </label>
+      <input type="radio" name="collapse" id="third" />
+
+      <div class="content">
+        <div class="informacoes-gerais-do-paciente">
+          <div class="detalhes-collapse">
+            <span class="titulo-collapse">Nome</span>
+            <span class="dados-do-cliente">Paciente 1</span>
+          </div>
+
+          <div class="detalhes-collapse">
+            <span class="titulo-collapse">Email</span>
+            <span class="dados-do-cliente">paciente1@gmail.com</span>
+          </div>
+
+          <div class="detalhes-collapse">
+            <span class="titulo-collapse">CPF</span>
+            <span class="dados-do-cliente">123.456.789-00</span>
+          </div>
+
+          <div class="detalhes-collapse">
+            <span class="titulo-collapse">Whatsapp</span>
+            <a href="#" class="dados-do-cliente" id="botao-entrar-em-contato"><img src="{% static 'imagens/icone-whatsapp.svg' %}" alt="icone-whatsapp" /> Entrar em contato</a>
+          </div>
+        </div>
+
+        <hr class="solid" />
+
+        <div class="informacoes-gerais-do-paciente">
+          <div class="detalhes-collapse">
+            <span class="titulo-collapse">Dieta</span>
+            <span class="aguardando-acao">Aguardando resposta do formulário de pré-consulta</span>
+          </div>
+
+          <button id="botao-criar-dieta">
+            <i class="ph ph-plus"></i>
+            <span>Criar dieta</span>
+          </button>
+        </div>
+
+        <hr class="solid" />
+
+        <div class="informacoes-gerais-do-paciente">
+          <div class="detalhes-collapse">
+            <span class="titulo-collapse">Diário alimentar</span>
+            <span class="aguardando-acao">Aguardando resposta do formulário de pré-consulta</span>
+          </div>
+        </div>
+
+        <div class="footer-collapse-pacientes">
+          <button id="botao-editar">
+            <i class="ph ph-pencil-simple-line"></i>
+            Editar
+          </button>
+          <button id="botao-excluir">
+            <i class="ph ph-trash"></i>
+            Excluir
+          </button>
+        </div>
       </div>
-    </div>
-  </li>
-</ul>
-
+    </li>
+  </ul>
 {% endblock %}
